# Cuda-Raytracer

./: .gitignore  CMakeLists.txt  README.md
ext/assimp/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
src/: Application.cpp  Application.h  BVH.cpp  BVH.h  Camera.cpp  Camera.h  Cuda_utils.cu  Cuda_utils.h  Dimensions.h  Frame.cpp  Frame.h  Object_Loader.cpp  Object_Loader.h  Quad.cpp  Quad.h  Ray_tracer.cu  Shader.cpp  Shader.h  Update_frame.h  call_ray_tracer.h  cuda_utils.h  main.cpp  ray_tracer.cu  stb_image.cpp  stb_image.h  temp.h
src/Shaders/: fragment_shader.glsl  vertex_shader.glsl
src/utils/: camera_params_calculation.py  focal_distance.py
